--- a/ExtensinsDemo/My Project/Resources.resx
+++ b/ExtensinsDemo/My Project/Resources.resx
@@ -124,4 +124,7 @@
   <data name="PercentageOf_InfoText" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PercentageOf_InfoText.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="SignTest_InfoText" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SignTest_InfoText.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
