--- a/ExtensinsDemo/My Project/Resources.resx
+++ b/ExtensinsDemo/My Project/Resources.resx
@@ -121,6 +121,9 @@
   <data name="FractionBy_InfoText" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FractionBy_InfoText.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="IsPrime_InfoText" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IsPrime_InfoText.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="PercentageOf_InfoText" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PercentageOf_InfoText.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
