Neue lokalisierte Eigenschaften für Erweiterungsfunktionen
In der Datei `Resources.Designer.vb` wurden die Eigenschaften `DifferenceOf_InfoText`, `IsDivisibleBy_InfoText`, `IsInRangeOf_InfoText` und `IsMultipleOf_InfoText` hinzugefügt, um lokalisierte Zeichenfolgen für verschiedene Erweiterungsfunktionen bereitzustellen. Bestehende Kommentare wurden aktualisiert, um die neuen Funktionen widerzuspiegeln.

Zusätzlich wurden in der Datei `Resources.resx` neue Daten für die Eigenschaften `DifferenceOf_InfoText` und `IsInRangeOf_InfoText` hinzugefügt, die auf externe Textdateien verweisen. Diese Änderungen verbessern die Lokalisierung und Dokumentation der Funktionen in der Anwendung.

--- a/ExtensinsDemo/My Project/Resources.resx
+++ b/ExtensinsDemo/My Project/Resources.resx
@@ -118,11 +118,17 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="DifferenceOf_InfoText" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DifferenceOf_InfoText.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="FractionBy_InfoText" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FractionBy_InfoText.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="IsDivisibleBy_InfoText" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IsDivisibleBy_InfoText.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="IsInRangeOf_InfoText" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IsInRangeOf_InfoText.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="IsMultipleOf_InfoText" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IsMultipleOf_InfoText.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
