Neue Eigenschaft für hexadezimale Konvertierung hinzugefügt
In der Datei `Resources.Designer.vb` wurde die Eigenschaft `HexadecimalConversion_InfoText` hinzugefügt, die eine lokalisierte Zeichenfolge zurückgibt und die Erweiterungsfunktionen `ToVBHex` und `ToCSharpHex` beschreibt. Zudem wurde ein Schreibfehler in der Beschreibung der Eigenschaft `IsInRangeOf_InfoText` korrigiert.

In der Datei `Resources.resx` wurde ein neuer Eintrag für `HexadecimalConversion_InfoText` hinzugefügt, der auf die entsprechende Textdatei verweist.

--- a/ExtensinsDemo/My Project/Resources.resx
+++ b/ExtensinsDemo/My Project/Resources.resx
@@ -124,6 +124,9 @@
   <data name="FractionBy_InfoText" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FractionBy_InfoText.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="HexadecimalConversion_InfoText" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HexadecimalConversion_InfoText.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="IsDivisibleBy_InfoText" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IsDivisibleBy_InfoText.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
